--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,7 +11,7 @@
   "country_code_select": "Select your country code",
   "edit": "Edit",
   "email": "Email",
-  "enjoy_steem": "You can now enjoy Steem and all its features.",
+  "enjoy_steem": "You can now enjoy Vox and all its features.",
   "enter_confirmation_code": "Enter the confirmation code",
   "enter_email": "Enter your email address",
   "enter_phone": "Enter your phone number",
@@ -72,7 +72,7 @@
   "error_validation_account_segment_min": "Each username segment should be longer",
   "error_validation_account_segment_start": "Each username segment should start with a letter",
   "finish_text_1": "After validating your signup request, we will look it over for approval. Please be patient, as it may take time to review the account. As soon as you're approved, you will be sent a link to finalize your account.",
-  "finish_text_2": "You will be among the earliest members of the Steem community!",
+  "finish_text_2": "You will be among the earliest members of the Vox community!",
   "generate_new_password": "Generate a new password",
   "get_started": "Get started",
   "go_back": "Go back",
@@ -81,21 +81,21 @@
   "password_copied": "Password copied to clipboard",
   "phone_number": "Phone number",
   "please_confirm": "Please enter the code below to confirm it.",
-  "redirect_button_text": "Go to Steemit",
+  "redirect_button_text": "Go to Vox",
   "resend": "Resend",
   "save_password": "Save password",
   "save_password_text": "If you ever lose your password, your account will be irretrievably lost. We do not have your password, and we cannot help you recover it.",
   "send_sms": "We need to send you a quick text.",
   "sign_in": "Sign in",
-  "signup_username_right_text": "A single Steem account gets you into all Steem-based apps",
+  "signup_username_right_text": "A single Vox account gets you into all Vox-based apps",
   "signup_username_right_title": "One account is all you need",
   "sms_code": "We sent the code to you by SMS to {phoneNumber} {editLink}",
-  "steem_signup": "Steem signup",
+  "steem_signup": "Vox signup",
   "success_new_code_sent": "New code sent",
   "username": "Username",
   "username_available": "Good news! The username {username} is available.",
-  "username_know": "Start with a username. Your username is how you'll be known on all Steem-based apps.",
-  "username_know_steemit": "Start with a username. Your username is how you'll be known on Steemit and other Steem-based apps.",
+  "username_know": "Start with a username. Your username is how you'll be known on all Vox-based apps.",
+  "username_know_steemit": "Start with a username. Your username is how you'll be known on Vox and other Vox-based apps.",
   "username_steemit_login": "Do you already have an account? {link}",
   "welcome": "Welcome"
 }
