--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -94,7 +94,7 @@
   "success_new_code_sent": "New code sent",
   "username": "Username",
   "username_available": "Good news! The username {username} is available.",
-  "username_know": "Start with a username. Your username is how you'll be known on all Vox-based apps.",
+  "username_know": "Начните с имени пользователя. Ваше имя пользователя - это то, как вы будете известны во всех приложениях на основе Vox.",
   "username_know_steemit": "Start with a username. Your username is how you'll be known on Vox and other Vox-based apps.",
   "username_steemit_login": "Do you already have an account? {link}",
   "welcome": "Welcome"
