--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -6,96 +6,96 @@
   "confirm_existence": "Нам нужно знать, как с вами связаться",
   "confirm_password": "Введите свой пароль, чтобы подтвердить его.",
   "confirmation_code": "Код подтверждения",
-  "continue": "Continue",
-  "copy": "Copy",
-  "country_code_select": "Select your country code",
-  "edit": "Edit",
+  "continue": "Продолжить",
+  "copy": "Копировать",
+  "country_code_select": "Выберите код страны",
+  "edit": "Редактировать",
   "email": "Email",
-  "enjoy_steem": "You can now enjoy Vox and all its features.",
-  "enter_confirmation_code": "Enter the confirmation code",
-  "enter_email": "Enter your email address",
-  "enter_phone": "Enter your phone number",
-  "error_api_account_created": "Account already created",
-  "error_api_account_creation_progress": "Account creation in progress",
-  "error_api_account_longer": "Account name should be longer",
-  "error_api_account_verification_pending": "Account verification is not done",
-  "error_api_code_invalid": "Invalid code",
-  "error_api_code_required": "Code required",
-  "error_api_country_code_required": "Country code required",
-  "error_api_create_account": "An error occurred while creating the account",
-  "error_api_domain_blacklisted": "This domain name is blacklisted. Please provide another email address",
-  "error_api_email_exists_not": "Email address doesn't exist",
-  "error_api_email_format": "Please provide a valid email address",
-  "error_api_email_required": "Email address required",
-  "error_api_email_used": "Email address already in use",
-  "error_api_email_verified": "Email address already verified",
-  "error_api_general": "An unexpected error occurred. Please try again later",
-  "error_api_phone_required": "Phone number required",
-  "error_api_phone_too_many": "Too many attempts. Please request a new code",
-  "error_api_phone_used": "This number is already linked to an existing account, or to an account still under review.",
-  "error_api_phone_verified": "Phone number already verified",
-  "error_api_prefix_invalid": "Invalid prefix",
-  "error_api_public_keys_required": "Public keys required",
-  "error_api_recaptcha_invalid": "Recaptcha invalid",
-  "error_api_recaptcha_required": "Recaptcha required",
-  "error_api_sent_email_failed": "Failed to send confirmation email",
-  "error_api_token_invalid": "Invalid token",
-  "error_api_token_invalid_type": "Invalid token type",
-  "error_api_token_required": "Token required",
-  "error_api_unknown_user": "Unknown user",
-  "error_api_user_exists_not": "User doesn't exist",
-  "error_api_username_required": "Username required",
-  "error_api_username_reserved": "Username reserved",
-  "error_api_username_used": "This username is already in use",
-  "error_api_wait": "Please wait at least one minute between retries",
-  "error_api_actionlimit": "You are doing that too much, please try again tomorrow",
-  "error_confirmation_code_required": "'Please input the code you received",
-  "error_country_code_required": "Please select your country code",
-  "error_email_required": "Please input your email address",
-  "error_password_match": "Passwords don't match",
-  "error_password_required": "Password required",
-  "error_phone_format": "Phone number invalid",
-  "error_phone_required": "Please input your phone number",
-  "error_recaptcha_required": "Please validate the recaptcha",
-  "error_token_required": "Token required.",
-  "error_username_required": "Please input your username",
-  "error_username_taken": "The username you chose {username} has already been taken. Please choose another username.",
-  "error_validation_account_alpha": "Account name should contain only letters, digits, periods, and dashes",
-  "error_validation_account_dash": "Account name should contain only one dash in a row",
-  "error_validation_account_end": "Account name should end with a letter or digit",
-  "error_validation_account_max": "Account name should be shorter",
-  "error_validation_account_min": "Account name should be longer",
-  "error_validation_account_start": "Each username segment should start with a letter",
-  "error_validation_account_segment_alpha": "Each username segment should contain only letters, digits, and dashes",
-  "error_validation_account_segment_dash": "Each username segment should contain only one dash in a row",
-  "error_validation_account_segment_end": "Each username segment should end with a letter or digit",
-  "error_validation_account_segment_min": "Each username segment should be longer",
-  "error_validation_account_segment_start": "Each username segment should start with a letter",
-  "finish_text_1": "After validating your signup request, we will look it over for approval. Please be patient, as it may take time to review the account. As soon as you're approved, you will be sent a link to finalize your account.",
-  "finish_text_2": "You will be among the earliest members of the Vox community!",
-  "generate_new_password": "Generate a new password",
-  "get_started": "Get started",
-  "go_back": "Go back",
-  "oops": "Oops!",
-  "password": "Password",
-  "password_copied": "Password copied to clipboard",
-  "phone_number": "Phone number",
-  "please_confirm": "Please enter the code below to confirm it.",
-  "redirect_button_text": "Go to Vox",
-  "resend": "Resend",
-  "save_password": "Save password",
-  "save_password_text": "If you ever lose your password, your account will be irretrievably lost. We do not have your password, and we cannot help you recover it.",
-  "send_sms": "We need to send you a quick text.",
-  "sign_in": "Sign in",
-  "signup_username_right_text": "A single Vox account gets you into all Vox-based apps",
+  "enjoy_steem": "Теперь вы можете наслаждаться Vox и всеми его функциями.",
+  "enter_confirmation_code": "Введите код подтверждения",
+  "enter_email": "Введите ваш адрес электронной почты",
+  "enter_phone": "Введите свой номер телефона",
+  "error_api_account_created": "Учетная запись уже создана",
+  "error_api_account_creation_progress": "Создание учетной записи в процессе",
+  "error_api_account_longer": "Имя учетной записи должно быть длиннее",
+  "error_api_account_verification_pending": "Проверка аккаунта не завершена",
+  "error_api_code_invalid": "Неверный код",
+  "error_api_code_required": "Требуется код",
+  "error_api_country_code_required": "Требуется код страны",
+  "error_api_create_account": "Произошла ошибка при создании учетной записи",
+  "error_api_domain_blacklisted": "Это доменное имя занесено в черный список. Укажите другой адрес электронной почты",
+  "error_api_email_exists_not": "Адрес электронной почты не существует",
+  "error_api_email_format": "Пожалуйста, представьте действующий адрес электронной почты",
+  "error_api_email_required": "Требуется адрес электронной почты",
+  "error_api_email_used": "Адрес электронной почты уже используется",
+  "error_api_email_verified": "Адрес электронной почты уже проверен",
+  "error_api_general": "Произошла непредвиденная ошибка. Пожалуйста, повторите попытку позже",
+  "error_api_phone_required": "Требуется номер телефона",
+  "error_api_phone_too_many": "Слишком много попыток. Пожалуйста, запросите новый код",
+  "error_api_phone_used": "Этот номер уже связан с существующей учетной записью или с учетной записью, все еще находящейся на рассмотрении.",
+  "error_api_phone_verified": "Номер телефона уже подтвержден",
+  "error_api_prefix_invalid": "Недопустимый префикс",
+  "error_api_public_keys_required": "Доступны общедоступные ключи",
+  "error_api_recaptcha_invalid": "Recaptcha недействителен",
+  "error_api_recaptcha_required": "Требуется Recaptcha",
+  "error_api_sent_email_failed": "Не удалось отправить подтверждение по электронной почте",
+  "error_api_token_invalid": "Недопустимый токен",
+  "error_api_token_invalid_type": "Недопустимый тип токена",
+  "error_api_token_required": "Требуется токен",
+  "error_api_unknown_user": "Неизвестный пользователь",
+  "error_api_user_exists_not": "Пользователь не существует",
+  "error_api_username_required": "Требуется имя пользователя",
+  "error_api_username_reserved": "Имя пользователя зарезервировано",
+  "error_api_username_used": "Это имя пользователя уже используется",
+  "error_api_wait": "Подождите, пожалуйста, по крайней мере одну минуту между попытками",
+  "error_api_actionlimit": "Слишком много попыток, повторите завтра",
+  "error_confirmation_code_required": "'Введите код, который вы получили",
+  "error_country_code_required": "Выберите свой код страны",
+  "error_email_required": "Введите адрес электронной почты",
+  "error_password_match": "Пароли не совпадают",
+  "error_password_required": "Требуется пароль",
+  "error_phone_format": "Недопустимый номер телефона",
+  "error_phone_required": "Введите свой номер телефона",
+  "error_recaptcha_required": "Пожалуйста, подтвердите Recaptcha",
+  "error_token_required": "Требуется токен.",
+  "error_username_required": "Введите свое имя пользователя",
+  "error_username_taken": "Имя пользователя {username}, которое вы выбрали, уже используется. Выберите другое имя пользователя.",
+  "error_validation_account_alpha": "Имя учетной записи должно содержать только буквы, цифры, периоды и тире",
+  "error_validation_account_dash": "Имя учетной записи должно содержать только одну строку в строке",
+  "error_validation_account_end": "Имя учетной записи должно заканчиваться буквой или цифрой",
+  "error_validation_account_max": "Имя учетной записи должно быть короче",
+  "error_validation_account_min": "Имя учетной записи должно быть длиннее",
+  "error_validation_account_start": "Каждый сегмент имени пользователя должен начинаться с буквы",
+  "error_validation_account_segment_alpha": "Каждый сегмент имени пользователя должен содержать только буквы, цифры и тире",
+  "error_validation_account_segment_dash": "Каждый сегмент имени пользователя должен содержать только одну строку в строке",
+  "error_validation_account_segment_end": "Каждый сегмент имени пользователя должен заканчиваться буквой или цифрой",
+  "error_validation_account_segment_min": "Каждый сегмент имени пользователя должен быть длиннее",
+  "error_validation_account_segment_start": "Каждый сегмент имени пользователя должен начинаться с буквы",
+  "finish_text_1": "После проверки вашего запроса на регистрацию мы рассмотрим его для утверждения. Пожалуйста, будьте терпеливы, так как может потребоваться время для просмотра учетной записи. Как только вы будете одобрены, вам будет отправлена ссылка для завершения регистрации вашей учетной записи.",
+  "finish_text_2": "Вы станете одним из первых членов сообщества Vox!",
+  "generate_new_password": "Создать новый пароль",
+  "get_started": "Начать",
+  "go_back": "Возвращаться",
+  "oops": "Ой!",
+  "password": "Пароль",
+  "password_copied": "Пароль скопирован в буфер обмена",
+  "phone_number": "Номер телефона",
+  "please_confirm": "Введите код ниже, чтобы подтвердить его.",
+  "redirect_button_text": "Перейти к Vox",
+  "resend": "Отправить",
+  "save_password": "Сохраните пароль",
+  "save_password_text": "Если вы потеряете свой пароль, ваша учетная запись будет безвозвратно потеряна. У нас нет вашего пароля, и мы не можем помочь вам его восстановить.",
+  "send_sms": "Нам нужно отправить вам быстрый текст.",
+  "sign_in": "Войти",
+  "signup_username_right_text": "Одна учетная запись Vox предоставляет доступ ко всем приложения на основе Vox",
   "signup_username_right_title": "Одна учетная запись - все, что вам нужно",
-  "sms_code": "We sent the code to you by SMS to {phoneNumber} {editLink}",
-  "steem_signup": "Vox signup",
-  "success_new_code_sent": "New code sent",
-  "username": "Username",
-  "username_available": "Good news! The username {username} is available.",
+  "sms_code": "Мы отправили вам код по SMS на номер {phoneNumber} {editLink}",
+  "steem_signup": "Vox войти",
+  "success_new_code_sent": "Новый код отправлен",
+  "username": "Имя пользователя",
+  "username_available": "Хорошие новости! Имя {username} доступно.",
   "username_know": "Начните с имени пользователя. Ваше имя пользователя - это то, как вы будете известны во всех приложениях на основе Vox.",
-  "username_know_steemit": "Start with a username. Your username is how you'll be known on Vox and other Vox-based apps.",
-  "username_steemit_login": "Do you already have an account? {link}",
-  "welcome": "Welcome"
+  "username_know_steemit": "Начните с имени пользователя. Ваше имя пользователя - это то, как вы будете известны во всех приложениях на основе Vox.",
+  "username_steemit_login": "У вас уже есть аккаунт? {link}",
+  "welcome": "Добро пожаловать!"
 }
