fix locale, Signup page icon remove

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -75,7 +75,7 @@
   "finish_text_2": "Вы станете одним из первых членов сообщества Vox!",
   "generate_new_password": "Создать новый пароль",
   "get_started": "Начать",
-  "go_back": "Возвращаться",
+  "go_back": "Назад",
   "oops": "Ой!",
   "password": "Пароль",
   "password_copied": "Пароль скопирован в буфер обмена",
